--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,8 @@
     "prettier"
   ],
   "rules": {
+    "react/jsx-one-expression-per-line": "off",
+    "react/no-unescaped-entities": "off",
     "react/no-array-index-key": "off",
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
